--- a/README.html
+++ b/README.html
@@ -387,28 +387,143 @@ two csv files (in the outputs folder):
 </ul>
 </div>
 </div>
-<div id="raw-data-folder" class="section level2">
-<h2>raw-data folder:</h2>
+<div id="data-folder" class="section level2">
+<h2>Data folder:</h2>
+<p>The folder from which data is pulled for analyses</p>
+<div id="raw-data-files-for-calculating-taxonomic-and-functional-indices" class="section level3">
+<h3>Raw data files for calculating taxonomic and functional
+indices:</h3>
 <ul>
-<li><p><strong><em>RawData_metadata.docx</em></strong> : Provides
-metadata regarding raw data files</p></li>
-<li><p><strong>csvs_each_dataset</strong> folder: Contains raw taxonomic
-composition data for all included studies</p></li>
+<li><p><strong><em>LT_taxalist_2010-2020_long.csv</em></strong> :
+Contains raw taxonomic composition (abundance) data in long format for
+all included sites. Used for calculations of taxonomic diversity, XX,
+and XX.</p></li>
+<li><p><strong><em>LT_taxalist_2010-2020_short_transposed.csv</em></strong>
+: Contains raw taxonomic composition (abundance) data in wide format for
+all included sites. Data are transported into a simplified
+site-by-species matrix. Used for calculations of functional
+diversity.</p></li>
+<li><p><strong><em>LT_traits_2010-2020_short.csv</em></strong> :
+Contains raw trait data (extracted from freshwaterecology.info) in wide
+format for all included taxa. Used for calculations of functional
+diversity.</p></li>
+<li><p><strong><em>LT_CWMs_long.csv</em></strong> : Contains site-year
+level calculated community-weighted means (CWMs) in long format. Used
+for calculations of functional turnover.</p></li>
 </ul>
 </div>
-<div id="outputs-folder" class="section level2">
-<h2>outputs folder:</h2>
+<div id="raw-data-files-of-environmental-data-and-site-metadata" class="section level3">
+<h3>Raw data files of environmental data and site metadata:</h3>
 <ul>
-<li><p><strong><em>All_indices_benthicMacroInverts_AllYears_alienzeros.csv</em></strong>
-: Contains data for each site and year on:</p>
+<li><p><strong><em>LT_siteYr_EnvVariables.csv</em></strong> : Contains
+raw environmental data in wide format for 28 (out of 41) included sites.
+Used for all driver analyses, but included in main data file
+“LT_siteYr_AllData_wNAs_modified.csv”.</p></li>
+<li><p><strong><em>LT_siteYr_Factors.csv</em></strong> : Contains annual
+site-year level metadata, including sampling dates, coordinates,
+ecological quality ratios/classes, etc. Required for the calculation of
+functional turnover.</p></li>
+<li><p><strong><em>LT_site_metadata.csv</em></strong> : Contains
+condensed site-level metadata, including River sampled, coordinates,
+River type, Extent of modification, etc. Required for checking
+metaanalytic models.</p></li>
+</ul>
+</div>
+<div id="main-data-file-for-statistical-analyses-see-dedicated-metadata-file" class="section level3">
+<h3>Main data file for statistical analyses (see dedicated metadata
+file):</h3>
+<ul>
+<li><strong><em>LT_siteYr_AllData_wNAs_modified.csv</em></strong> : This
+file is used in all trend and statistical analyses. It contains data for
+each site and year on:
 <ul>
 <li>taxonomic diversity metrics</li>
+<li>functional diversity metrics</li>
+<li>taxonomic group specific indices</li>
+<li>calculated environmental means from 12 months prior to biological
+sampling</li>
+<li>site-level factors (coordinates, river type, extent of
+modification)</li>
 </ul></li>
-<li><p><strong><em>All_siteLevel.csv</em></strong> : Contains data for
-each site on slopes of functional and taxonomic diversity indices and
-environmental drivers</p></li>
-<li><p><strong>outputs_metaAnaylsis</strong> folder: Trend meta-analysis
-model outputs</p></li>
+</ul>
+</div>
+<div id="taskids" class="section level3">
+<h3>TaskIDs:</h3>
+<ul>
+<li><p><strong><em>LT_ResponseTrends_TaskIDs.csv</em></strong> : Task
+IDs for running models of taxonomic and functional indices and their
+model estimates</p></li>
+<li><p><strong><em>LT_DriverTrends_TaskIDs.csv</em></strong> : Task IDs
+for running models of environmental drivers and thier model
+estimates</p></li>
+</ul>
+</div>
+</div>
+<div id="outputs-folder" class="section level2">
+<h2>Outputs folder:</h2>
+<p>The folder to which data is saved following analyses.</p>
+<ul>
+<li><p><strong><em>LT_siteYr_AllData.csv</em></strong> : Contains data
+for each site and year on:</p>
+<ul>
+<li>taxonomic diversity metrics</li>
+<li>functional diversity metrics</li>
+<li>taxonomic group specific indices</li>
+<li>calculated environmental means from 12 months prior to biological
+sampling</li>
+<li>site-level factors (coordinates, river type, extent of
+modification)</li>
+</ul></li>
+<li><p><strong><em>glsTrends_site_level.rds</em></strong> : Contains
+data for each site on slopes of functional and taxonomic diversity
+indices from the gls models used in “LT_macroinverts_site_trends.R”.
+File created using “LT_combining_repsonse_trends.R”. This file is
+necessary for illustrating the overall trends of biodiversity indices
+through time. Figures are generated using
+“LT_dentity_plots_trend_averages_and_distributions.R” and
+“LT_dentity_plots_trend_averages_and_distributions_wAllGroups.R”. File
+can be viewed in R.</p></li>
+<li><p><strong><em>glsTrends_site_level_drivers.rds</em></strong> :
+Contains data for each site on slopes of environmental drivers from the
+gls models used in “LT_drivers_site_trends.R”. File created using
+“LT_combining_driver_trends.R”. This file is necessary for illustrating
+the overall trends of environmental drivers through time. Figures are
+generated using
+“LT_dentity_plots_trend_averages_and_distribution_drivers.R” and
+“LT_dentity_plots_trend_averages_and_distribution_nutrient_drivers.R”.
+File can be viewed in R.</p></li>
+<li><p><strong><em>glsTrends_drivers_site_level.rds</em></strong> :
+Contains data on the responses of each taxonomic and functional index to
+the suite of environmental drivers from the linear mixed models used in
+“LT_driver_analysis_all_sites_combined.R”. File created using
+“LT_combining_driver_estimates.R”. This file is necessary for
+illustrating the overall responses of biodiversity indices to the the
+suite of environmental predictors used. Figures are generated using
+“LT_overall_driver_analyses_figures.R”. File can be viewed in
+R.</p></li>
+<li><p><strong><em>null_model_outputs_wNAs.csv</em></strong> : Contains
+the null model outputs of the functional diversity metrics. This file is
+manually uploaded into the “Calculation_of_functional_indices.R” instead
+of having to rerun the null models every time I would like to rerun the
+code. PLEASE NOTE: Null model analyses are computationally exhausting.
+When running the null model analyses, I recommend first changing the
+number of iterations to 3, checking that the code runs smoothly, and
+thereafter increasing the number of iterations to 999. One should be
+aware that null model analyses can take a surpringly long time to run,
+for example on my machine (Dell XPS 15, 12th Gen Intel(R) Core(TM)
+i9-12900HK 2.50 GHz, 32.0 GB of RAM, with two graphics cards) it took ~8
+hours per funcitonal index (e.g., FRic). Thus, patience is key.</p></li>
+<li><p><strong>Site_trends</strong> folder: Site-level GLS model outputs
+for biodiversity indices used in meta analytic models</p></li>
+<li><p><strong>Metaanalysis_trends</strong> folder: Meta analytic
+Bayesian mixed model outputs for biodiversity indices</p></li>
+<li><p><strong>Driver_trends</strong> folder: Site-level GLS model
+outputs for environmental drivers used in meta analytic models</p></li>
+<li><p><strong>Driver_metaanalysis_trends</strong> folder: Meta analytic
+Bayesian mixed model outputs for environmental drivers</p></li>
+<li><p><strong>Drivers_all_sites</strong> folder: Contains linear mixed
+model outputs for the overall responses of biodiversity indices to the
+suite of environmental drivers used.</p></li>
 <li><p><strong>outputs_movingWindow</strong> folder: Moving window
 analysis outputs</p></li>
 <li><p><strong>outputs_driver</strong> folder: Driver analysis
@@ -432,8 +547,8 @@ model estimates</p></li>
 models calculating temperature and precipitation trends</p></li>
 </ul>
 </div>
-<div id="r-folder" class="section level2">
-<h2>R folder</h2>
+<div id="r-scripts-folder" class="section level2">
+<h2>R scripts folder</h2>
 <ul>
 <li><p><strong>Initial_Biodiversity_FuncTrait_and_climate_calcs</strong>
 folder: Contains scripts to calculate taxonomic and functional trait
@@ -499,6 +614,12 @@ many analyses including:</p>
 <li>sensitivity analyses</li>
 </ul></li>
 </ul>
+</div>
+<div id="addtional-functions-folder" class="section level2">
+<h2>Addtional functions folder</h2>
+</div>
+<div id="sensitivity-folder" class="section level2">
+<h2>Sensitivity folder</h2>
 </div>
 <div id="plots-folder" class="section level2">
 <h2>plots folder</h2>
